:bug: Fix avatar and channel name not showing on some items (#1)

--- a/src/styles/patches.css
+++ b/src/styles/patches.css
@@ -115,9 +115,9 @@ html[__ATTR__="list"] .yt-lockup-metadata-view-model__title{
   overflow:hidden !important;white-space:normal !important;line-height:1.35 !important;font-weight:600 !important;
 }
 
-html[__ATTR__="list"] .yt-lockup-view-model__metadata .yt-lockup-metadata-view-model__avatar{ display:none !important; }
+html[__ATTR__="list"] .__PATCHED__ .yt-lockup-view-model__metadata .yt-lockup-metadata-view-model__avatar{ display:none !important; }
 
-html[__ATTR__="list"] .yt-lockup-metadata-view-model__metadata yt-content-metadata-view-model{
+html[__ATTR__="list"] .__PATCHED__ .yt-lockup-metadata-view-model__metadata yt-content-metadata-view-model{
   display:block !important;
   position:absolute !important;
   left:-99999px !important;
